<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alyafei.abdulmajid.mystore.EditCar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/Plate_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/JCarIDEditText" />

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/JNameEditText" />

        <TextView
            android:text="@string/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/JModelEditText" />

        <TextView
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" />

        <CheckBox
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/JStatisCheckbox" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/Edit"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:layout_width="wrap_content"
                android:background="@color/green"
                android:id="@+id/JUpdateButton" />

            <Button
                android:text="@string/Delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:id="@+id/JDeleteButton"
                android:background="@android:color/holo_red_light" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
