<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alyafei.abdulmajid.mystore.AddCar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/Plate_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/JCarIDEditText" />

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/JNameEditText" />

        <TextView
            android:text="@string/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/JModelEditText" />

        <TextView
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />

        <CheckBox
            android:text="@string/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/JisCarNewCheckBox"
            android:layout_weight="0.00" />

        <Button
            android:text="@string/Add_Car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/JAddCarButton"
            android:background="@color/green"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</RelativeLayout>
