<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registeration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alyafei.abdulmajid.mystore.Registeration">

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_marginTop="75dp"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/JPasswordRegEditText"
        android:layout_below="@+id/textView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/JUsernameRegEditText"
        android:layout_below="@+id/textView9"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/JUsernameRegEditText"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9" />

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/JRegisterButton"
        android:background="@color/green"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/JPasswordRegEditText"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
